---
source: tests/test_serde.rs
expression: "&release(\"foo@01.02.003.4-alpha+1234\")"

---
{
  "package": "foo",
  "version_raw": "01.02.003.4-alpha+1234",
  "version_parsed": {
    "major": 1,
    "minor": 2,
    "patch": 3,
    "revision": 4,
    "pre": "alpha",
    "build_code": "1234",
    "raw_short": "01.02.003.4-alpha",
    "components": 4,
    "raw_quad": [
      "01",
      "02",
      "003",
      "4"
    ]
  },
  "build_hash": null,
  "description": "01.02.003.4-alpha (1234)"
}
